@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2007/04/30 17:03:11 minskim Exp $
+
+SHA1 (fastthread-1.0.tgz) = 607468fcf60326677ca3f37f5bb7ca8a7d67f1cc
+RMD160 (fastthread-1.0.tgz) = 6990c34106f9da40b5666988bf330e9dcf9a275f
+Size (fastthread-1.0.tgz) = 18233 bytes
